--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,5 +13,8 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "dotenv": "^17.2.3",
     "hardhat": "^2.28.3"
+  },
+  "dependencies": {
+    "eventfund-ticket-platform": "file:.."
   }
 }
